# fsi-stock-analysis

./: .gitignore  FSI_StockAnalysis.py  FSI_StockAnalysis_vLLM.py  README.md  config.toml  fsi_core.py  fsi_old.py  pyproject.toml  requirements.txt
benchmark/: analyze.py  run_benchmark.py  scenarios.toml  suite.toml
benchmark/portfolios/: default.toml
fsi_vllm/: fsi_roc_finance_vllm.py
